--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -21,15 +21,15 @@
        alt="Fork me on GitHub" /></a>
     <div id="container">
         <div class="download">
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v5.0.1/openseadragon-bin-5.0.1.zip">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v6.0.0/openseadragon-bin-6.0.0.zip">
                 <img border="0" width="90" src="/images/zip.png"></a>
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v5.0.1/openseadragon-bin-5.0.1.tar.gz">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v6.0.0/openseadragon-bin-6.0.0.tar.gz">
                 <img border="0" width="90" src="/images/tar.png"></a>
         </div>
         <img class="logo" src="/images/logo.png">
         <h1>
             <a href="/">OpenSeadragon</a><span class="version">
-                5.0.1
+                6.0.0
             </span>
             <span class="tagline">
             </span>
@@ -115,6 +115,11 @@
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr> -->
     <tr>
+        <td><a href="https://iipimage.sourceforge.io">IIPImage</a></td>
+        <td>Open source server (C++)</td>
+        <td><a href="/examples/tilesource-dzi/">DZI</a> (see <a href="https://iipimage.sourceforge.io/documentation/protocol#deepzoom">IIPImage DZI documentation</a>)</td>
+    </tr>
+    <tr>
         <td><a href="https://github.com/VoidVolker/MagickSlicer">MagickSlicer</a></td>
         <td>shell script (Linux/Mac)</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
@@ -164,7 +169,7 @@
     </tr>
     <tr>
         <td><a href="https://cantaloupe-project.github.io/">Cantaloupe</a></td>
-        <td>Server</td>
+        <td>Open source server (Java)</td>
         <td><a href="/examples/tilesource-iiif/">IIIF</a></td>
     </tr>
     <tr>
@@ -178,7 +183,7 @@
     </tr>
     <tr>
         <td><a href="https://iipimage.sourceforge.io/">IIPImage</a></td>
-        <td>Server</td>
+        <td>Open source server (C++)</td>
         <td><a href="/examples/tilesource-iiif/">IIIF</a></td>
     </tr>
     <tr>
@@ -202,6 +207,20 @@
         </td>
     </tr>
     <tr>
+        <td colspan="3"><h4>Iris</h4></td>
+    </tr>
+    <tr>
+        <td><a href="https://github.com/ryanlandvater/Iris-RESTful-Server">Iris</a></td>
+        <td>C++</td>
+        <td><a href="/examples/tilesource-iris/">Iris</a></td>
+        <td colspan="3"><h4>IIP</h4></td>
+    </tr>
+    <tr>
+        <td><a href="https://iipimage.sourceforge.io">IIPImage</a></td>
+        <td>Open source server (C++)</td>
+        <td><a href="/examples/tilesource-iip/">IIP</a></td>
+    </tr>
+    <tr>
         <td colspan="3"><h4>TMS</h4></td>
     </tr>
     <tr>
@@ -223,6 +242,16 @@
         <td colspan="3"><h4>Zoomify</h4></td>
     </tr>
     <tr>
+        <td><a href="https://github.com/GoogleCloudPlatform/dataflow-zoomify-image/">Dataflow-zoomify-image</a></td>
+        <td>Free Google Cloud Dataflow template allowing large amounts of images to be processed in parallel</td>
+        <td><a href="/examples/tilesource-zoomify/">Zoomify</a></td>
+    </tr>
+    <tr>
+        <td><a href="https://iipimage.sourceforge.io">IIPImage</a></td>
+        <td>Open source server (C++)</td>
+        <td><a href="/examples/tilesource-zoomify/">Zoomify</a> (see <a href="https://iipimage.sourceforge.io/documentation/protocol#zoomify">IIPImage Zoomify documentation</a>)</td>
+    </tr>
+    <tr>
         <td><a href="http://www.zoomify.com/free.htm">Zoomify App</a></td>
         <td>Free proprietary desktop app for Windows and Mac</td>
         <td><a href="/examples/tilesource-zoomify/">Zoomify</a></td>
@@ -242,12 +271,7 @@
         <td>Free proprietary export plugin for Photoshop</td>
         <td><a href="/examples/tilesource-zoomify/">Zoomify</a></td>
     </tr>
-    <tr>
-        <td><a href="https://github.com/GoogleCloudPlatform/dataflow-zoomify-image/">Dataflow-zoomify-image</a></td>
-        <td>Free Google Cloud Dataflow template allowing large amounts of images to be processed in parallel</td>
-        <td><a href="/examples/tilesource-zoomify/">Zoomify</a></td>
-    </tr>
-    
+
     <tr>
         <td colspan="3"><h4>Tools for Working with Tiled Images</h4></td>
     </tr>
