Update "In the wild" section
Added Diva.js
 - Updated links for Project Mirador
 - Added the Tify viewer
 - Removed the Wellcome Player, since the link no longer resolved, and replaced it with Universal Viewer (Wellcome Player became Universal Viewer.)

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -504,14 +504,16 @@
 <ul class="square-list">
     <li><a href="http://annotorious.github.io/demos/openseadragon-preview.html">Annotorious</a></li>
     <li><a href="https://cirrocumulus.readthedocs.io/">Cirrocumulus for large-scale single-cell genomics data</a></li>
+    <li><a href="https://diva.simssa.ca">Diva.js</a> (<a href="https://diva.simssa.ca/try/basic-manifest/">Demo</a> - <a href="https://github.com/ddmal/diva.js">GitHub</a>)</li>
     <li><a href="https://github.com/tokee/juxta">Juxta</a> (<a href="http://labs.statsbiblioteket.dk/juxta/subject3795/">Demo</a>)</li>
     <li><a href="https://micr.io">Micrio</a> (<a href="https://micr.io/iiif/image-api">Demo</a>)</li>
-    <li><a href="http://projectmirador.org">Mirador</a> (<a href="http://projectmirador.org/demo/">demo</a> - <a href="https://github.com/IIIF/mirador">GitHub</a>)</li>
+    <li><a href="http://projectmirador.org">Mirador</a> (<a href="http://projectmirador.org/demo/">demo</a> - <a href="https://github.com/projectmirador/mirador">GitHub</a>)</li>
     <li><a href="http://mosaically.com/">Mosaically</a></li>
     <li><a href="http://openslide.org/">OpenSlide</a> (<a href="http://openslide.org/demo/">demo</a>)</li>
 <!--    <li><a href="https://photosynth.net/preview/">Photosynth 3rd Generation</a></li> link does not resolve-->
+    <li><a href="https://tify.rocks/">Tify</a> (<a href="https://github.com/tify-iiif-viewer/tify">GitHub</a>)</li>
+    <li><a href="https://universalviewer.io">Universal Viewer</a> (<a href="https://uv-v4.netlify.app/#?manifest=https://d.lib.ncsu.edu/collections/catalog/nubian-message-1992-11-30/manifest&xywh=-1007%2C-242%2C6503%2C6265">Demo</a> - <a href="https://github.com/universalviewer/universalviewer">GitHub</a></li>
     <li><a href="https://github.com/LibraryOfCongress/wdl-viewer">WDL Viewer</a></li>
-    <li><a href="http://player.digirati.co.uk/">Wellcome Player</a></li>
     <li><a href="http://zoomable.ca/">Zoomable</a></li>
 </ul>
 
